--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>&ltINSERT CREATIVE NAME HERE&gt</title>
+    <title>BudgetApp</title>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -15,7 +14,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">&ltINSERT CREATIVE NAME HERE&gt</a>
+        <a class="navbar-brand" href="#">BudgetApp</a>
         <button
                 class="navbar-toggler"
                 type="button"
@@ -30,7 +29,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">A Page</a>
+                    <a class="nav-link active" href="#">Checking</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Savings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Credit</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cash</a>
                 </li>
             </ul>
         </div>
@@ -47,10 +55,14 @@
         <tr>
             <td>Movie Ticket</td>
             <td>9/3/2023</td>
-            <td class="text-danger">-$6.00</td>
+            <td align="right" class="text-danger">-$6.00</td>
         </tr>
         </tbody>
     </table>
+    <div class="d-flex">
+        <button class="btn btn-primary">Log a Transaction</button>
+        <p class="text-danger ms-auto me-1">-$6.00</p>
+    </div>
 </div>
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
