--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -28,17 +28,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Checking</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Savings</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Credit</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Cash</a>
+                <li th:each="account: ${accounts}" class="nav-item"
+                >
+                    <a class="nav-link" th:classappend="${account == currentAccount ? 'active' : ''}"
+                       th:href="@{'/'+${account}}"
+                       th:text="${account}"/>
                 </li>
             </ul>
         </div>
