--- a/src/main/resources/templates/loginNew.html
+++ b/src/main/resources/templates/loginNew.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>BankApp Login</title>
 </head>
 <body>
-
+<div class="title">
+    <h1>Create an Account</h1>
+</div>
+<div class="login">
+    <form action="">
+        <label for="fullName">Full Name:</label><br>
+        <input type="text" id="fullName" name="fullName"><br><br>
+        <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username"><br><br>
+        <label for="email">Email:</label><br>
+        <input type="text" id="email" name="email"><br><br>
+        <label for="password">Password:</label><br>
+        <input type="text" id="password" name="password"><br><br>
+        <label for="confirm">Confirm Password:</label><br>
+        <input type="text" id="confirm" name="confirm"><br><br>
+        <input type="submit" value="Register">
+    </form>
+    <p>Have an account? <a href="loginExisting.html"><bold>Login</bold></a></p>
+</div>
 </body>
 </html>
