--- a/src/main/resources/templates/html/loginExisting.html
+++ b/src/main/resources/templates/html/loginExisting.html
@@ -3,18 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>BankApp Login</title>
+    <link rel="stylesheet" href="/templates/css/style.css">
 </head>
-<style>
-    /* Center the whole container */
-    /* https://stackoverflow.com/questions/14123999/center-a-div-horizontally-and-vertically */
-    .login {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-    }
-</style>
 <body>
     <div class="login">
         <div class="title">
