--- a/src/main/resources/templates/html/loginExisting.html
+++ b/src/main/resources/templates/html/loginExisting.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <title>BankApp Login</title>
     <link rel="stylesheet" href="/templates/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="login">
         <div class="title">
-            <h1>Welcome Back</h1>
+            <h1>Welcome Back!</h1>
         </div>
         <form action="">
             <label for="username">Username:</label><br>
