--- a/src/main/resources/templates/html/loginNew.html
+++ b/src/main/resources/templates/html/loginNew.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>BankApp Login</title>
     <link rel="stylesheet" href="/templates/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="login">
