Get all of the pages linking together

--- a/src/main/resources/templates/loginExisting.html
+++ b/src/main/resources/templates/loginExisting.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BankApp Login</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
         <input type="text" id="password" name="password"><br><br>
         <input type="submit" value="Login">
     </form>
-    <p>Don't have an account? <a href="loginNew.html">
+    <p>Don't have an account? <a href="/loginNew">
         <bold>Register</bold>
     </a></p>
 </div>
