--- a/src/main/resources/templates/loginNew.html
+++ b/src/main/resources/templates/loginNew.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BankApp Login</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
         <input type="text" id="confirm" name="confirm"><br><br>
         <input type="submit" value="Register">
     </form>
-    <p>Have an account? <a href="loginExisting.html">
+    <p>Have an account? <a href="/login">
         <bold>Login</bold>
     </a></p>
 </div>
