Basic implementation with cookies

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,6 +35,12 @@
                        th:text="${account}"/>
                 </li>
             </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="ms-auto nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+
+            </ul>
         </div>
     </div>
 </nav>
