--- a/src/main/resources/templates/loginNew.html
+++ b/src/main/resources/templates/loginNew.html
@@ -14,17 +14,17 @@
         <h1>Create an Account</h1>
     </div>
     <form action="">
-        <label for="fullName">Full Name:</label><br>
-        <input type="text" id="fullName" name="fullName"><br><br>
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"><br><br>
-        <label for="email">Email:</label><br>
-        <input type="text" id="email" name="email"><br><br>
-        <label for="password">Password:</label><br>
-        <input type="text" id="password" name="password"><br><br>
-        <label for="confirm">Confirm Password:</label><br>
-        <input type="text" id="confirm" name="confirm"><br><br>
-        <input type="submit" value="Register">
+        <label for="fullName">Full Name:</label>
+        <input type="text" id="fullName" name="fullName">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username">
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email">
+        <label for="password">Password:</label>
+        <input type="text" id="password" name="password">
+        <label for="confirm">Confirm Password:</label>
+        <input type="text" id="confirm" name="confirm"><br>
+        <input class="button" type="submit" value="Register">
     </form>
     <p>Have an account? <a href="/login">
         <bold>Login</bold>
