Initial login style complete

--- a/src/main/resources/templates/loginExisting.html
+++ b/src/main/resources/templates/loginExisting.html
@@ -17,7 +17,7 @@
         <label for="username">Username:</label>
         <input type="text" th:field="*{username}" id="username" name="username">
         <label for="password">Password:</label>
-        <input type="password" th:field="*{password}" id="password" name="password"><br>
+        <input type="password" th:field="*{password}" id="password" name="password"><br><br>
         <input class="button" type="submit" value="Login">
     </form>
     <p>Don't have an account? <a href="/loginNew">
