--- a/src/main/resources/templates/loginNew.html
+++ b/src/main/resources/templates/loginNew.html
@@ -23,7 +23,7 @@
         <label for="password">Password:</label>
         <input type="text" id="password" name="password">
         <label for="confirm">Confirm Password:</label>
-        <input type="text" id="confirm" name="confirm"><br>
+        <input type="text" id="confirm" name="confirm"><br><br>
         <input class="button" type="submit" value="Register">
     </form>
     <p>Have an account? <a href="/login">
