Cite proper sources in style.css

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -47,6 +47,7 @@ p {
     padding-top: 8px;
 }
 
+/* https://www.w3schools.com/css/tryit.asp?filename=trycss_form_focus2 */
 input {
     width: 450px;
     border-radius: 25px;
