Coded a login form to create a user

--- a/src/main/resources/templates/loginExisting.html
+++ b/src/main/resources/templates/loginExisting.html
@@ -15,9 +15,9 @@
     </div>
     <form action="#" th:action="@{/login}" th:object="${loginForm}" method="post">
         <label for="username">Username:</label>
-        <input type="text" th:field="*{username}" id="username" name="username">
+        <input type="text" th:field="*{username}" id="username" name="username" required>
         <label for="password">Password:</label>
-        <input type="password" th:field="*{password}" id="password" name="password"><br><br>
+        <input type="password" th:field="*{password}" id="password" name="password" required><br><br>
         <input class="button" type="submit" value="Login">
     </form>
     <p>Don't have an account? <a href="/loginNew">
