--- a/src/main/resources/templates/loginNew.html
+++ b/src/main/resources/templates/loginNew.html
@@ -18,12 +18,15 @@
         <input type="text" th:field="*{fullName}" id="fullName" name="fullName" required>
         <label for="username">Username:</label>
         <input type="text" th:field="*{username}" id="username" name="username" required>
+        <p th:if="${#fields.hasErrors('username')}" th:class="error">Username must be longer than 6 characters</p>
         <label for="email">Email:</label>
         <input type="email" th:field="*{email}" id="email" name="email" required>
+        <p th:if="${#fields.hasErrors('email')}" th:class="error">Invalid Email</p>
         <label for="password">Password:</label>
         <input type="password" th:field="*{password}" id="password" name="password" required>
         <label for="confirm">Confirm Password:</label>
         <input type="password" th:field="*{confirm}" id="confirm" name="confirm" required><br><br>
+        <p th:if="${#fields.hasErrors('password')}" th:class="error">Passwords must match</p>
         <input class="button" type="submit" value="Register">
     </form>
     <p>Have an account? <a href="/login">
