--- a/src/main/resources/templates/loginNew.html
+++ b/src/main/resources/templates/loginNew.html
@@ -13,25 +13,26 @@
     <div class="title">
         <h1>Create an Account</h1>
     </div>
-    <form action="#" th:action="@{/loginNew}" th:object="${loginForm}" method="post">
+    <form action="#" th:action="@{/loginNew}" th:object="${NewLoginForm}" method="post">
+        <span th:if="${#fields.hasGlobalErrors()}" th:errors="*{global}">Global Errors</span>
         <label for="fullName">Full Name:</label>
         <input type="text" th:field="*{fullName}" id="fullName" name="fullName" required>
         <label for="username">Username:</label>
         <input type="text" th:field="*{username}" id="username" name="username" required>
-        <p th:if="${#fields.hasErrors('username')}" th:class="error">Username must be longer than 6 characters</p>
+        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username must be longer than 6 characters</p>
         <label for="email">Email:</label>
         <input type="email" th:field="*{email}" id="email" name="email" required>
-        <p th:if="${#fields.hasErrors('email')}" th:class="error">Invalid Email</p>
+        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Invalid Email</p>
         <label for="password">Password:</label>
         <input type="password" th:field="*{password}" id="password" name="password" required>
         <label for="confirm">Confirm Password:</label>
         <input type="password" th:field="*{confirm}" id="confirm" name="confirm" required><br><br>
-        <p th:if="${#fields.hasErrors('password')}" th:class="error">Passwords must match</p>
+        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Passwords must match</p>
         <input class="button" type="submit" value="Register">
-<!--   An attempt to fix the lack of error displays     -->
-        <div th:if="${param.error}">
-            <span th:text="#{login.error}"></span>
-        </div>
+<!--&lt;!&ndash;   An attempt to fix the lack of error displays     &ndash;&gt;-->
+<!--        <div th:if="${param.error}">-->
+<!--            <span th:text="#{login.error}"></span>-->
+<!--        </div>-->
     </form>
     <p>Have an account? <a href="/login">
         <bold>Login</bold>
