--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -67,7 +67,9 @@ input {
 }
 
 .error {
-    color: red;
-    font-weight: bold;
+    display: block;
+    color: darkred;
+    font-family: 'Noto Sans JP', sans-serif;
     margin-top: 5px;
+    font-size: 0.9em;
 }
