--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,118 +1,99 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>BudgetApp</title>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-            crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">BudgetApp</a>
-        <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-        >
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li th:each="account: ${accounts}" class="nav-item">
-                    <a
-                            class="nav-link"
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">BudgetApp</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li th:if="${accounts != null}" th:each="account: ${accounts}" class="nav-item">
+                        <a class="nav-link"
                             th:classappend="${account.getName() == currentAccount.getName() ? 'active' : ''}"
-                            th:href="@{'/account/'+${account.getId()}}"
-                            th:text="${account.getName()}"
-                    />
-                </li>
-                <button class="btn btn-outline-success" type="submit" id="addAccountButton" data-bs-toggle="modal"
+                            th:href="@{'/account/'+${account.getId()}}" th:text="${account.getName()}" />
+                    </li>
+                    <button class="btn btn-outline-success" type="submit" id="addAccountButton" data-bs-toggle="modal"
                         data-bs-target="#addAccountModal"><i class="bi bi-wallet"></i>
-                    Add
-                </button>
-            </ul>
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false" th:text="'Hi, '+${currentUser.username}"
-                    >
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="/logout">Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
+                        Add
+                    </button>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false" th:text="'Hi, '+${currentUser.username}">
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container mt-3">
+        <table class="table">
+            <thead>
+                <th>Transaction Name</th>
+                <th>To/From</th>
+                <th>Price</th>
+            </thead>
+            <tbody>
+                <tr th:if="${currentAccount != null}" th:each="transaction: ${currentAccount.getTransactions()}">
+                    <td th:text="${transaction.getName()}"></td>
+                    <td th:text="${transaction.getToFrom()}"></td>
+                    <td style="text-align: right" class="text-danger" th:text="${transaction.getAmountInDollars()}">
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="d-flex">
+            <button class="btn btn-primary">Log a Transaction</button>
+            <p class="text-danger ms-auto me-1" th:text="${currentAccount.getBalanceInDollars()}"></p>
         </div>
     </div>
-</nav>
-<div class="container mt-3">
-    <table class="table">
-        <thead>
-        <th>Transaction Name</th>
-        <th>To/From</th>
-        <th>Price</th>
-        </thead>
-        <tbody>
-        <tr th:each="transaction: ${currentAccount.getTransactions()}">
-            <td th:text="${transaction.getName()}"></td>
-            <td th:text="${transaction.getToFrom()}"></td>
-            <td
-                    style="text-align: right"
-                    class="text-danger"
-                    th:text="${transaction.getAmountInDollars()}"
-            ></td>
-        </tr>
-        </tbody>
-    </table>
-    <div class="d-flex">
-        <button class="btn btn-primary">Log a Transaction</button>
-        <p
-                class="text-danger ms-auto me-1"
-                th:text="${currentAccount.getBalanceInDollars()}"
-        ></p>
-    </div>
-</div>
 
-<div class="modal fade" id="addAccountModal" tabindex="-1" aria-labelledby="addAccountModalButton" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Add Account</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="newAccountForm" action="#" th:action="@{/add-account}" th:object="${newAccountForm}"
-                      method="POST">
-                    <label for="newAccountName">Account Name</label>
-                    <input type="text" class="mb-2 form-control" id="newAccountName" th:field="*{accountName}"/>
-                    <label for="newAccountBalance">Starting Balance</label>
-                    <input type="number" value="0" class="mb-2 form-control" id="newAccountBalance"
-                           th:field="*{accountBalance}"/>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-success" form="newAccountForm">Add</button>
+    <div class="modal fade" id="addAccountModal" tabindex="-1" aria-labelledby="addAccountModalButton"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Add Account</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="newAccountForm" action="#" th:action="@{/add-account}" th:object="${newAccountForm}"
+                        method="POST">
+                        <label for="newAccountName">Account Name</label>
+                        <input type="text" class="mb-2 form-control" id="newAccountName" th:field="*{accountName}" />
+                        <label for="newAccountBalance">Starting Balance</label>
+                        <input type="number" value="0" class="mb-2 form-control" id="newAccountBalance"
+                            th:field="*{accountBalance}" />
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-success" form="newAccountForm">Add</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"
-></script>
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
