--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,13 @@
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <style>
-        #button-column{
-        width: 1em;
-       }
+        #button-column {
+            width: 1em;
+        }
+
+
+
+
 
     </style>
 </head>
@@ -64,7 +68,10 @@
             <td style="text-align: right" class="text-danger" th:text="${transaction.getAmountInDollars()}">
             </td>
             <td>
-                <button class="btn btn-danger"><i class="bi bi-trash-fill"></i></button>
+                <button class="btn btn-danger" th:data-transaction-id="${transaction.getId()}"
+                        onclick="confirmDelete(this.getAttribute('data-transaction-id'))">
+                    <i class="bi bi-trash-fill"></i>
+                </button>
             </td>
         </tr>
         </tbody>
@@ -72,6 +79,8 @@
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
         Log a Transaction
+    </button>
+    <button type="button" class="btn btn-danger" th:text="'Delete '+${currentAccount.getName()}">
     </button>
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
@@ -85,7 +94,7 @@
                 </div>
                 <div class="modal-body">
                     <form id="newTransaction" action="#" th:action="@{/add-transaction}"
-                          th:object="${newTransaction}" method="POST">
+                          th:object="${newTransactionForm}" method="POST">
                         <label for="newTransaction">Transaction Amount</label>
                         <input type="number" class="mb-2 form-control" id="newAmount" th:field="*{amountInCents}"/>
                         <label for="newTransaction">Transaction Name</label>
@@ -132,10 +141,56 @@
         </div>
     </div>
 </div>
+<div id="transactionDeletionConfirmationModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Confirm Delete</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this transaction?
+            </div>
+            <div class="modal-footer">
+                <form id="deleteTransactionForm" th:object="${deleteTransactionForm}"
+                      th:action="@{/delete-transaction}" method="post">
+                    <input id="transactionDeletionModalTransactionId" type="number" hidden name="transactionId"/>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
 
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+<script>
+        function confirmDelete(transactionId) {
+        console.log(transactionId);
+            // Set the transactionId in the hidden input field
+            document.getElementById("transactionDeletionModalTransactionId").value = transactionId;
+            new bootstrap.Modal(document.getElementById('transactionDeletionConfirmationModal')).show();
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</script>
 </body>
 
 </html>
