--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
             width: 1em;
         }
 
+
     </style>
 </head>
 
@@ -93,10 +94,11 @@
                 <div class="modal-body">
                     <form id="newTransaction" action="#" th:action="@{/add-transaction}"
                           th:object="${newTransactionForm}" method="POST">
-                        <label for="newTransaction">Transaction Amount</label>
-                        <input type="number" class="mb-2 form-control" id="newAmount" th:field="*{amountInCents}"/>
                         <label for="newTransaction">Transaction Name</label>
                         <input type="text" value="0" class="mb-2 form-control" id="newName" th:field="*{name}"/>
+                        <label for="newTransaction">Transaction Amount</label>
+                        <input type="number" step=".01" class="mb-2 form-control" id="newAmount"
+                               th:field="*{amountInDollars}"/>
                         <label for="newTransaction">From Where?</label>
                         <input type="text" value="0" class="mb-2 form-control" id="newToFrom"
                                th:field="*{toFrom}"/>
@@ -196,6 +198,7 @@
             document.getElementById("accountDeletionModalAccountId").value = accountId;
             new bootstrap.Modal(document.getElementById('accountDeletionConfirmationModal')).show();
         }
+
 
 </script>
 </body>
