--- a/src/main/resources/templates/loginExisting.html
+++ b/src/main/resources/templates/loginExisting.html
@@ -15,6 +15,10 @@
     </div>
     <form action="#" class="error" th:action="@{/login}" th:object="${loginForm}" method="post">
         <span class="error" th:if="${#fields.hasGlobalErrors()}" th:errors="*{global}">Global Errors</span>
+        <!-- Tells the user if they have a failed login attempt ('Bad Credentials') -->
+        <div th:if="${param.error != null}"
+             th:text="${session[SPRING_SECURITY_LAST_EXCEPTION].message}" class="alert alert-danger">
+        </div>
         <label for="username">Username:</label>
         <input class="login-bar" type="text" th:field="*{username}" id="username" name="username" required>
         <label for="password">Password:</label>
