--- a/src/main/resources/templates/loginExisting.html
+++ b/src/main/resources/templates/loginExisting.html
@@ -14,6 +14,9 @@
         <h1>Welcome Back!</h1>
     </div>
     <form action="#" class="error" th:action="@{/login}" th:object="${loginForm}" method="post">
+        <div th:if="${param.error != null}"
+             th:text="${session[SPRING_SECURITY_LAST_EXCEPTION].message}" class="alert alert-danger">
+        </div>
         <span class="error" th:if="${#fields.hasGlobalErrors()}" th:errors="*{global}">Global Errors</span>
         <label for="username">Username:</label>
         <input class="login-bar" type="text" th:field="*{username}" id="username" name="username" required>
