Make some progress on accounts

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -111,8 +111,10 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-success" form="newTransaction">Add</button>
+                        <button type="submit" name="type" value="income" class="btn btn-success"
+                            form="newTransaction">Income</button>
+                        <button type="submit" name="type" value="expense" class="btn btn-danger"
+                            form="newTransaction">Expense</button>
                     </div>
                 </div>
             </div>
