--- a/src/main/resources/templates/loginExisting.html
+++ b/src/main/resources/templates/loginExisting.html
@@ -14,6 +14,7 @@
         <h1>Welcome Back!</h1>
     </div>
     <form action="#" class="error" th:action="@{/login}" th:object="${loginForm}" method="post">
+<!--    This div is actually very important for showing the errors    -->
         <div th:if="${param.error != null}"
              th:text="${session[SPRING_SECURITY_LAST_EXCEPTION].message}" class="alert alert-danger">
         </div>
